tests/ui/parser/expr-rarrow-call.stderr
error: `->` is not valid for field access or method call
  --> $DIR/expr-rarrow-call.rs:13:10
   |
LL |     named->foo;
   |          ^^
   |
   = help: the `.` operator will automatically dereference the value, except if the value is a raw pointer

error: `->` is not valid for field access or method call
  --> $DIR/expr-rarrow-call.rs:17:12
   |
LL |     unnamed->0;
   |            ^^
   |
   = help: the `.` operator will automatically dereference the value, except if the value is a raw pointer

error: `->` is not valid for field access or method call
  --> $DIR/expr-rarrow-call.rs:21:6
   |
LL |     t->0;
   |      ^^
   |
   = help: the `.` operator will automatically dereference the value, except if the value is a raw pointer

error: `->` is not valid for field access or method call
  --> $DIR/expr-rarrow-call.rs:22:6
   |
LL |     t->1;
   |      ^^
   |
   = help: the `.` operator will automatically dereference the value, except if the value is a raw pointer

error: `->` is not valid for field access or method call
  --> $DIR/expr-rarrow-call.rs:29:8
   |
LL |     foo->clone();
   |        ^^
   |
   = help: the `.` operator will automatically dereference the value, except if the value is a raw pointer

error: aborting due to 5 previous errors

